--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
-        <header class="header">
+        <header class="navbar">
             <div class="container">
-                <div class="header-top">
+                <div class="navbar-top">
                     <a href="#" class="logo">
                         <img
                             src="./img/horizontal-logo.svg"
@@ -24,7 +24,7 @@
                             class="logo__image"
                         />
                     </a>
-                    <form action="#" class="search">
+                    <form action="#" class="search navbar__search">
                         <input
                             type="text"
                             class="search__input"
@@ -34,7 +34,7 @@
                             <img src="./img/search.svg" alt="Icon: search" />
                         </button>
                     </form>
-                    <a href="#" class="user">
+                    <a href="#" class="user navbar__user">
                         <img
                             src="./img/user-avatar.jpeg"
                             alt="Avatar: Nathan"
@@ -42,32 +42,43 @@
                         />
                         <span class="user__name">Nathan</span>
                     </a>
+                    <button class="menu-button navbar-top__menu-button">
+                        <span class="menu-button__line"></span>
+                        <span class="menu-button__line"></span>
+                        <span class="menu-button__line"></span>
+                    </button>
                 </div>
-                <ul class="header-menu">
-                    <li class="header-menu__item">
-                        <a href="#" class="header-menu__link">All Deals</a>
-                    </li>
-                    <li class="header-menu__item">
-                        <a href="#" class="header-menu__link">Hotels</a>
-                    </li>
-                    <li class="header-menu__item">
-                        <a href="#" class="header-menu__link">Activities</a>
-                    </li>
-                    <li class="header-menu__item">
-                        <a href="#" class="header-menu__link"
-                            >Hotel Day Packages</a
-                        >
-                    </li>
-                    <li class="header-menu__item">
-                        <a href="#" class="header-menu__link">Restaurants</a>
-                    </li>
-                    <li class="header-menu__item">
-                        <a href="#" class="header-menu__link">Events</a>
-                    </li>
-                    <li class="header-menu__item">
-                        <a href="#" class="header-menu__link">Rodrigues</a>
-                    </li>
-                </ul>
+            </div>
+            <div class="navbar-bottom">
+                <div class="container">
+                    <ul class="navbar-menu">
+                        <li class="navbar-menu__item">
+                            <a href="#" class="navbar-menu__link">All Deals</a>
+                        </li>
+                        <li class="navbar-menu__item">
+                            <a href="#" class="navbar-menu__link">Hotels</a>
+                        </li>
+                        <li class="navbar-menu__item">
+                            <a href="#" class="navbar-menu__link">Activities</a>
+                        </li>
+                        <li class="navbar-menu__item">
+                            <a href="#" class="navbar-menu__link"
+                                >Hotel Day Packages</a
+                            >
+                        </li>
+                        <li class="navbar-menu__item">
+                            <a href="#" class="navbar-menu__link"
+                                >Restaurants</a
+                            >
+                        </li>
+                        <li class="navbar-menu__item">
+                            <a href="#" class="navbar-menu__link">Events</a>
+                        </li>
+                        <li class="navbar-menu__item">
+                            <a href="#" class="navbar-menu__link">Rodrigues</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </header>
     </body>
