--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
             href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
         <link rel="stylesheet" href="./css/style.css" />
+        <script src="./js/swiper-bundle.min.js" defer></script>
+        <script src="./js/main.js" defer></script>
     </head>
     <body>
         <header class="navbar">
@@ -81,5 +84,75 @@
                 </div>
             </div>
         </header>
+        <nav class="breadcrumb">
+            <div class="container">
+                <ul class="breadcrumb-list">
+                    <li class="breadcrumb-list__item">
+                        <a href="#" class="breadcrumb-list__link">Home</a>
+                    </li>
+                    <li class="breadcrumb-list__item">
+                        <a href="#" class="breadcrumb-list__link"
+                            >Flash Offers</a
+                        >
+                    </li>
+                    <li class="breadcrumb-list__item">Grand Hilton Hotel</li>
+                </ul>
+            </div>
+        </nav>
+        <section class="hotel">
+            <div class="container">
+                <div class="hotel-info">
+                    <div class="hotel-info__text">
+                        <div class="hotel-wrapper">
+                            <div class="stars">
+                                <img src="./img/star.svg" alt="Icon: Star" />
+                                <img src="./img/star.svg" alt="Icon: Star" />
+                                <img src="./img/star.svg" alt="Icon: Star" />
+                                <img src="./img/star.svg" alt="Icon: Star" />
+                                <img src="./img/star.svg" alt="Icon: Star" />
+                            </div>
+                            <h1 class="hotel-name hotel-info__name">
+                                GRAND HILTON HOTEL
+                            </h1>
+                            <span class="offer hotel-info__offer"
+                                >Flash Offer</span
+                            >
+                        </div>
+                        <p class="hotel-description hotel-info__description">
+                            Half-Board / All Inclusive + Complimentary
+                            Activities + Child Stays Free
+                        </p>
+                    </div>
+                    <div class="rating hotel-info__rating">
+                        <span class="rating__text">User Rating</span>
+                        <span class="rating__counter">4.5/5</span>
+                    </div>
+                </div>
+                <div class="hotel-grid">
+                    <div class="slider">
+                        <div class="swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <img src="./img/slide.jpg" alt="slide" />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="./img/slide.jpg" alt="slide" />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="./img/slide.jpg" alt="slide" />
+                                </div>
+                            </div>
+                            <!-- If we need navigation buttons -->
+                            <button
+                                class="slider-button slider-button--prev"
+                            ></button>
+                            <button
+                                class="slider-button slider-button--next"
+                            ></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
