--- a/index.html
+++ b/index.html
@@ -129,17 +129,29 @@
                     </div>
                 </div>
                 <div class="hotel-grid">
-                    <div class="slider">
+                    <div class="slider hotel__slider">
                         <div class="swiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <img src="./img/slide.jpg" alt="slide" />
+                                    <img
+                                        class="swiper-slide__image"
+                                        src="./img/slide.jpg"
+                                        alt="slide"
+                                    />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="./img/slide.jpg" alt="slide" />
+                                    <img
+                                        class="swiper-slide__image"
+                                        src="./img/slide.jpg"
+                                        alt="slide"
+                                    />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="./img/slide.jpg" alt="slide" />
+                                    <img
+                                        class="swiper-slide__image"
+                                        src="./img/slide.jpg"
+                                        alt="slide"
+                                    />
                                 </div>
                             </div>
                             <!-- If we need navigation buttons -->
@@ -149,6 +161,71 @@
                             <button
                                 class="slider-button slider-button--next"
                             ></button>
+                        </div>
+                    </div>
+                    <div class="hotel-right">
+                        <div class="booking">
+                            <div class="booking__info">
+                                <div class="booking__price">
+                                    <span class="booking__start"
+                                        >price starts as</span
+                                    >
+                                    <strong class="booking__pricetag"
+                                        >$ 8,500</strong
+                                    >
+                                    <span class="booking__per-room"
+                                        >per room / night</span
+                                    >
+                                </div>
+                                <div class="booking__room">
+                                    <div class="booking__text">
+                                        <img
+                                            src="./img/user.svg"
+                                            alt="Icon: User"
+                                            class="booking__icon"
+                                        />
+                                        <span class="booking__description"
+                                            >2 x Guests</span
+                                        >
+                                    </div>
+                                    <div class="booking__text">
+                                        <img
+                                            src="./img/home.svg"
+                                            alt="Icon: Home"
+                                            class="booking__icon"
+                                        />
+                                        <span class="booking__description"
+                                            >1 x Room</span
+                                        >
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="booking__call-center">
+                                <span class="booking__heading"
+                                    >Quick Booking</span
+                                >
+                                <a href="tel:12100" class="booking__number">
+                                    <img
+                                        src="./img/phone-call.svg"
+                                        alt="Icon: Phone"
+                                    />
+                                    <span class="booking__num">12100</span>
+                                </a>
+                            </div>
+                            <button class="button booking__button">
+                                View Other Options
+                            </button>
+                        </div>
+                        <div class="map">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.5414950278614!2d98.2992197!3d7.8382524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x305025650c33dbab%3A0xa67a542329d011e1!2z0J_RhdGD0LrQtdGCLCDQmtCw0YDQvtC9LCDQntGC0LXQu9GMINCl0LjQu9GC0L7QvQ!5e0!3m2!1sru!2sby!4v1655803974838!5m2!1sru!2sby"
+                                width="100%"
+                                height="213"
+                                style="border: 0"
+                                allowfullscreen=""
+                                loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"
+                            ></iframe>
                         </div>
                     </div>
                 </div>
