feat: Сверстана секция newsletter и сделан адаптив для неё

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </form>
                     <a href="#" class="user navbar__user">
                         <img
-                            src="./img/user-avatar.jpeg"
+                            src="./img/user-avatar.jpg"
                             alt="Avatar: Nathan"
                             class="user__avatar"
                         />
@@ -229,6 +229,22 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="newsletter">
+            <div class="newsletter-wrapper">
+                <h2 class="newsletter-title newsletter__title">
+                    subscribe to our
+                    <span class="newsletter-title__strong">Newsletter</span>
+                </h2>
+                <form action="#" class="subscribe newsletter__subscribe">
+                    <input
+                        type="text"
+                        class="subscribe__input"
+                        placeholder="Your email address"
+                    />
+                    <button class="subscribe__button">Send</button>
+                </form>
             </div>
         </section>
     </body>
