--- a/index.html
+++ b/index.html
@@ -258,7 +258,9 @@
                                     <span class="booking__num">12100</span>
                                 </a>
                             </div>
-                            <button class="button booking__button">
+                            <button
+                                class="button booking__button modal__button--active"
+                            >
                                 View Other Options
                             </button>
                         </div>
@@ -483,7 +485,9 @@
                         <h3 class="card__title">
                             The curious corner of chamarel
                         </h3>
-                        <button class="card__button">Book Now</button>
+                        <button class="card__button modal__button--active">
+                            Book Now
+                        </button>
                     </div>
                     <div class="card activities__card">
                         <img
@@ -492,7 +496,9 @@
                             class="card__image"
                         />
                         <h3 class="card__title">Gymkhana club golf course</h3>
-                        <button class="card__button">Book Now</button>
+                        <button class="card__button modal__button--active">
+                            Book Now
+                        </button>
                     </div>
                     <div class="card activities__card">
                         <img
@@ -503,7 +509,9 @@
                         <h3 class="card__title">
                             Tamarind falls hiking trip - full day
                         </h3>
-                        <button class="card__button">Book Now</button>
+                        <button class="card__button modal__button--active">
+                            Book Now
+                        </button>
                     </div>
                     <div class="card activities__card">
                         <img
@@ -514,7 +522,9 @@
                         <h3 class="card__title">
                             The blue marine discovery quest
                         </h3>
-                        <button class="card__button">Book Now</button>
+                        <button class="card__button modal__button--active">
+                            Book Now
+                        </button>
                     </div>
                 </div>
             </div>
@@ -696,9 +706,8 @@
                                 placeholder="Phone Number*"
                             />
                             <textarea
-                                class="footer__message"
+                                class="message footer__message"
                                 placeholder="Message"
-                                disabled
                             ></textarea>
                             <button class="button footer__button" type="submit">
                                 Send
@@ -709,5 +718,34 @@
                 </div>
             </div>
         </footer>
+        <div class="modal">
+            <div class="modal__overlay"></div>
+            <div class="modal__dialog">
+                <button class="modal__close">
+                    <img src="./img/close.svg" alt="Icon: Close" />
+                </button>
+                <h3 class="modal__title modal__title--mb-3">Booking</h3>
+                <form action="#" class="modal__form">
+                    <input
+                        type="text"
+                        class="input modal__input"
+                        placeholder="Your Full Name*"
+                    />
+                    <input
+                        type="text"
+                        class="input modal__input"
+                        placeholder="Phone Number*"
+                    />
+                    <textarea
+                        class="message modal__message"
+                        placeholder="Message"
+                    ></textarea>
+                    <button class="button modal__button" type="submit">
+                        Send
+                    </button>
+                    <span class="modal__info">* Required Fields</span>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
