--- a/index.html
+++ b/index.html
@@ -716,6 +716,30 @@
                         </form>
                     </div>
                 </div>
+                <div class="footer-bottom">
+                    <ul class="footer-bottom__list">
+                        <li class="footer-bottom__item">
+                            <a href="#" class="footer-bottom__link"
+                                >Disclaimer</a
+                            >
+                        </li>
+                        <li class="footer-bottom__item">
+                            <a href="#" class="footer-bottom__link"
+                                >Conditions of use</a
+                            >
+                        </li>
+                        <li class="footer-bottom__item">
+                            <a href="#" class="footer-bottom__link"
+                                >Cancellation policy</a
+                            >
+                        </li>
+                    </ul>
+                    <img
+                        src="./img/footer-cards.png"
+                        alt="Icons: Cards"
+                        class="footer-bottom__cards"
+                    />
+                </div>
             </div>
         </footer>
         <div class="modal">
