--- a/index.html
+++ b/index.html
@@ -228,7 +228,6 @@
                                         <img
                                             src="./img/user.svg"
                                             alt="Icon: User"
-                                            class="booking__icon"
                                         />
                                         <span class="booking__description"
                                             >2 x Guests</span
@@ -238,7 +237,6 @@
                                         <img
                                             src="./img/home.svg"
                                             alt="Icon: Home"
-                                            class="booking__icon"
                                         />
                                         <span class="booking__description"
                                             >1 x Room</span
@@ -274,6 +272,250 @@
                                 loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade"
                             ></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="packages">
+            <div class="container">
+                <h2 class="packages__title">Other Packages</h2>
+                <div class="packages__wrapper">
+                    <div class="packages-primary">
+                        <div class="packages-primary__image">
+                            <span class="packages__offer">Flash Offer</span>
+                            <img src="./img/package-1.jpg" alt="Package 1" />
+                        </div>
+                        <div class="packages-primary__info">
+                            <div class="stars">
+                                <img src="./img/star.svg" alt="Icon: Star" />
+                                <img src="./img/star.svg" alt="Icon: Star" />
+                                <img src="./img/star.svg" alt="Icon: Star" />
+                                <img src="./img/star.svg" alt="Icon: Star" />
+                                <img src="./img/star.svg" alt="Icon: Star" />
+                            </div>
+                            <h3 class="packages-primary__title">
+                                Hotel Blue Haven
+                            </h3>
+                            <p class="packages-primary__description">
+                                Aute quis duis excepteur excepteur ipsum cat
+                                eiusmod consectetur enim laborum magna llit.
+                                Ipsum est fugiat velit ea llamco do esse ut in
+                                veniam sun in onsequat. Aute quis duis epteur
+                                excepteur ipsum occaecat eiusmod nsectetur enim
+                                laborum magna mollit. Ipsum est fugiat velit ea
+                                ullamco do
+                            </p>
+                            <div class="packages-primary__benefits">
+                                <img
+                                    src="./img/map-marker-light.svg"
+                                    alt="Icon: Map Marker"
+                                />
+                                <span class="packages-primary__details"
+                                    >1749 Wheeler Ridge Delaware</span
+                                >
+                            </div>
+                            <div class="packages-primary__benefits">
+                                <img src="./img/user.svg" alt="Icon: User" />
+                                <span class="packages-primary__details"
+                                    >2 x Guests</span
+                                >
+                            </div>
+                            <div class="packages-primary__benefits">
+                                <img src="./img/home.svg" alt="Icon: Home" />
+                                <span class="packages-primary__details"
+                                    >1 x Room</span
+                                >
+                            </div>
+                            <span class="packages-primary__price--old"
+                                >$ 10,500</span
+                            >
+                            <div class="packages-primary__footer">
+                                <strong class="booking__pricetag"
+                                    >$ 8,500</strong
+                                >
+                                <button
+                                    class="card__button modal__button--active"
+                                >
+                                    Book Now
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="packages-card">
+                        <div class="packages-card__image">
+                            <span class="packages__offer">Flash Offer</span>
+                            <img src="./img/package-2.jpg" alt="Image: Hotel" />
+                        </div>
+                        <div class="packages-card__info">
+                            <h3 class="packages-card__title">
+                                LUX* Belle Mare
+                            </h3>
+                            <div class="packages-card__benefits">
+                                <img
+                                    src="./img/map-marker-light.svg"
+                                    alt="Icon: Home"
+                                />
+                                <span class="packages-card__details"
+                                    >1749 Wheeler Ridge Delaware</span
+                                >
+                            </div>
+                            <div class="packages-card__benefits">
+                                <img src="./img/user.svg" alt="Icon: Home" />
+                                <span class="packages-card__details"
+                                    >2 x Guests</span
+                                >
+                            </div>
+                            <div class="packages-card__benefits">
+                                <img src="./img/home.svg" alt="Icon: Home" />
+                                <span class="packages-card__details"
+                                    >1 x Room</span
+                                >
+                            </div>
+                            <span class="packages-primary__price--old"
+                                >$ 8,500</span
+                            >
+                            <div class="packages-primary__footer">
+                                <strong class="booking__pricetag"
+                                    >$ 3,000</strong
+                                >
+                                <button
+                                    class="card__button modal__button--active"
+                                >
+                                    Book Now
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="packages-card">
+                        <div class="packages-card__image">
+                            <span class="packages__offer">Flash Offer</span>
+                            <img src="./img/package-3.jpg" alt="Image: Hotel" />
+                        </div>
+                        <div class="packages-card__info">
+                            <h3 class="packages-card__title">White Palace</h3>
+                            <div class="packages-card__benefits">
+                                <img
+                                    src="./img/map-marker-light.svg"
+                                    alt="Icon: Home"
+                                />
+                                <span class="packages-card__details"
+                                    >1749 Wheeler Ridge Delaware</span
+                                >
+                            </div>
+                            <div class="packages-card__benefits">
+                                <img src="./img/user.svg" alt="Icon: Home" />
+                                <span class="packages-card__details"
+                                    >2 x Guests</span
+                                >
+                            </div>
+                            <div class="packages-card__benefits">
+                                <img src="./img/home.svg" alt="Icon: Home" />
+                                <span class="packages-card__details"
+                                    >1 x Room</span
+                                >
+                            </div>
+                            <span class="packages-primary__price--old"
+                                >$ 10,500</span
+                            >
+                            <div class="packages-primary__footer">
+                                <strong class="booking__pricetag"
+                                    >$ 9,500</strong
+                                >
+                                <button
+                                    class="card__button modal__button--active"
+                                >
+                                    Book Now
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="packages-card">
+                        <div class="packages-card__image">
+                            <span class="packages__offer">Flash Offer</span>
+                            <img src="./img/package-4.jpg" alt="Image: Hotel" />
+                        </div>
+                        <div class="packages-card__info">
+                            <h3 class="packages-card__title">Luxury Place</h3>
+                            <div class="packages-card__benefits">
+                                <img
+                                    src="./img/map-marker-light.svg"
+                                    alt="Icon: Home"
+                                />
+                                <span class="packages-card__details"
+                                    >1749 Wheeler Ridge Delaware</span
+                                >
+                            </div>
+                            <div class="packages-card__benefits">
+                                <img src="./img/user.svg" alt="Icon: Home" />
+                                <span class="packages-card__details"
+                                    >2 x Guests</span
+                                >
+                            </div>
+                            <div class="packages-card__benefits">
+                                <img src="./img/home.svg" alt="Icon: Home" />
+                                <span class="packages-card__details"
+                                    >1 x Room</span
+                                >
+                            </div>
+                            <span class="packages-primary__price--old"
+                                >$ 4,500</span
+                            >
+                            <div class="packages-primary__footer">
+                                <strong class="booking__pricetag"
+                                    >$ 2,500</strong
+                                >
+                                <button
+                                    class="card__button modal__button--active"
+                                >
+                                    Book Now
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="packages-card">
+                        <div class="packages-card__image">
+                            <span class="packages__offer">Flash Offer</span>
+                            <img src="./img/package-5.jpg" alt="Image: Hotel" />
+                        </div>
+                        <div class="packages-card__info">
+                            <h3 class="packages-card__title">
+                                Hotel Five Star
+                            </h3>
+                            <div class="packages-card__benefits">
+                                <img
+                                    src="./img/map-marker-light.svg"
+                                    alt="Icon: Home"
+                                />
+                                <span class="packages-card__details"
+                                    >1749 Wheeler Ridge Delaware</span
+                                >
+                            </div>
+                            <div class="packages-card__benefits">
+                                <img src="./img/user.svg" alt="Icon: Home" />
+                                <span class="packages-card__details"
+                                    >2 x Guests</span
+                                >
+                            </div>
+                            <div class="packages-card__benefits">
+                                <img src="./img/home.svg" alt="Icon: Home" />
+                                <span class="packages-card__details"
+                                    >1 x Room</span
+                                >
+                            </div>
+                            <span class="packages-primary__price--old"
+                                >$ 6,500</span
+                            >
+                            <div class="packages-primary__footer">
+                                <strong class="booking__pricetag"
+                                    >$ 3,500</strong
+                                >
+                                <button
+                                    class="card__button modal__button--active"
+                                >
+                                    Book Now
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
